fix: remove unused collection